added profiles for unit and integration tests, added  formatter in pom.xml